--- a/src/assets/style/globals.scss
+++ b/src/assets/style/globals.scss
@@ -1,2 +1,7 @@
 @import '~bootstrap/scss/bootstrap.scss';
 @import './vars.scss';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+body{
+    font-family: $font-roboto;
+}
